# AudioDiffuser

./: pyproject.toml
configs/data/: fsd50k.yaml
configs/experiment/fsd50k/: diffunet_complex.yaml
configs/experiment/sc09/: diffunet_complex_oai_sc09_cfg.yaml
configs/paths/: default.yaml
src/: train.py
src/data/: fsd50k.py  sc09_datamodule.py
src/models/: diffunet_complex_module.py
